# AI-Course-Generator

./: Readme.md  docker-compose.yml
backend/: Dockerfile  check_db.py  db.py  debug_llm.py  debug_workflow.py  debug_yt.json  debug_yt.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  test_api_save.py
backend/Scripts/: activate  activate.bat  activate.fish
backend/agent/: agent.py  llm.py
backend/agent/tools/: __init__.py  explain.py  flashcards.py  mermaid.py  quiz.py  youtube.py
backend/app/: db.py  main.py
backend/app/agent/: agent.py
backend/app/agent/tools/: __init__.py  explain.py  flashcards.py  mermaid.py  youtube.py
backend/app/core/: security.py
backend/app/models/: user.py
backend/app/routers/: auth.py  course.py
backend/core/: security.py
backend/routers/: auth.py  chat.py  course.py  user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CourseHistory.jsx  CourseRenderer.jsx  Dashboard.jsx  Flashcards.jsx  GenyChatbot.jsx  Home.jsx  Profile.jsx  Quiz.jsx  loginpage.jsx
frontend/src/components/course/: ExplanationContent.jsx  MermaidBlock.jsx  ModuleCard.jsx  YouTubeEmbed.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useCourseStream.js
